--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sneakers",
-  "homepage": "https://sripathimanikanta.github.io/ReactJS",
+  "homepage": "https://sripathimanikanta.github.io/sneakers",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
